# rod6502

./: .gitignore  CMakeLists.txt  Makefile  addrdec.circ  addrdec.kicad_sch  addrdev_test.txt  data_display.kicad_sch  debug.kicad_sch  dummy.s  firmware.cfg  gen_addrdec_timings.lua  io.kicad_sch  irq.kicad_sch  irq_rw.circ  lcd.kicad_sch  leds_inv.kicad_sch  reset.kicad_sch  rod6502.kicad_pro  rod6502.kicad_sch  running_leds.s  serialcomm.kicad_sch  testmem.s  writemem.s
bios/: CMakeLists.txt  acia.s  cmd.inc  cmd.s  cmd_info.s  cmd_load.s  cmd_mdump.s  cmd_peek.s  cmd_poke.s  cmd_run.s  firmware_apps.cfg  firmware_bios.cfg  io.s  irq.s  lcd.s  main.s  mem.s  strlist.inc  strlist.s  sys.s  xmodem.inc  xmodem.s
bios/include/: acia.inc  io.inc  irq.inc  lcd.inc  mem.inc  sys.inc  via.inc
bios/post/: post.s  testacia.s  testirq.s  testmem.s
bios/tests/: CMakeLists.txt  test_mem.s
clock/: astable.kicad_sch  bistable.kicad_sch  clock.kicad_pro  clock.kicad_sch
cmake/: cc65-toolchain.cmake
hello/: CMakeLists.txt  main.s
hw/: addrdec.kicad_sch  addrdev_test.txt  address_display.kicad_sch  clock.kicad_sch  ctrl_display.kicad_sch  data_display.kicad_sch  gen_addrdec_timings.lua  io.kicad_sch  irq.kicad_sch  irq_rw.circ  lcd.kicad_sch  leds.kicad_sch  lvlconv4.kicad_sch  mem.kicad_sch  reset.kicad_sch  rod6502.kicad_prl  rod6502.kicad_pro  rod6502.kicad_sch  rw_split.circ  serialcomm.kicad_sch  sym-lib-table  vera.kicad_sch.kicad_sch  video_dac.kicad_sch  video_dac.sch  video_dac.wbk
rt6502/: CMakeLists.txt  lcd.s
rt6502/include/: export.inc  irq.inc  lcd.inc
(+15 files in other folders)
